--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.16.4",
     "express-session": "^1.17.0",
     "google-auth-library": "^5.5.1",
+    "googleapis": "^39.2.0",
     "mongoose": "^5.7.7",
     "nodemon": "^1.19.4",
     "react": "^16.7.0",
