--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "node": ">=12.0.0"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.7",
     "@reach/router": "^1.2.1",
+    "bootstrap": "^4.4.1",
     "connect-ensure-login": "^0.1.1",
     "core-js": "^3.3.6",
     "dotenv": "^8.2.0",
@@ -29,14 +31,21 @@
     "firebase-admin": "^8.10.0",
     "google-auth-library": "^5.5.1",
     "googleapis": "^39.2.0",
+    "jquery": "^3.4.1",
     "mongoose": "^5.7.7",
     "nodemon": "^1.19.4",
+    "popper.js": "^1.16.1",
     "react": "^16.7.0",
+    "react-bootstrap": "^1.0.0",
     "react-dom": "^16.7.0",
     "react-google-login": "^5.0.7",
+    "react-landing-page": "^2.0.2",
     "react-router-dom": "^4.3.1",
+    "rebass": "^2.1.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
+    "styled-components": "^3.4.10",
+    "typeface-roboto": "0.0.75",
     "url-loader": "^1.1.2"
   },
   "devDependencies": {
