--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.9.7",
+    "@mui-treasury/styles": "^1.1.0",
     "@reach/router": "^1.2.1",
     "bootstrap": "^4.4.1",
     "connect-ensure-login": "^0.1.1",
