--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-google-login": "^5.0.7",
     "react-landing-page": "^2.0.2",
     "react-router-dom": "^4.3.1",
+    "react-select": "^3.1.0",
     "rebass": "^2.1.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
