--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node": ">=12.0.0"
   },
   "dependencies": {
+    "@appbaseio/reactivesearch": "^3.7.3",
     "@material-ui/core": "^4.9.7",
     "@mui-treasury/styles": "^1.1.0",
     "@reach/router": "^1.2.1",
@@ -47,6 +48,7 @@
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "styled-components": "^3.4.10",
+    "tabletop": "^1.6.2",
     "typeface-roboto": "0.0.75",
     "url-loader": "^1.1.2"
   },
