--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "googleapis": "^39.2.0",
     "jquery": "^3.4.1",
     "mongoose": "^5.7.7",
+    "nodemailer": "^6.4.6",
     "nodemon": "^1.19.4",
     "popper.js": "^1.16.1",
     "react": "^16.7.0",
