--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@appbaseio/reactivesearch": "^3.7.3",
     "@material-ui/core": "^4.9.7",
+    "@material-ui/icons": "^4.9.1",
     "@mui-treasury/styles": "^1.1.0",
     "@reach/router": "^1.2.1",
     "bootstrap": "^4.4.1",
