--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "firebase-admin": "^8.10.0",
     "google-auth-library": "^5.5.1",
     "googleapis": "^39.2.0",
+    "handlebars": "^4.7.6",
     "jquery": "^3.4.1",
     "mongoose": "^5.7.7",
     "nodemailer": "^6.4.6",
