--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "build": "webpack"
   },
   "repository": {
-    "type": "git",
-    "url": ""
+    "type": "git"
   },
-  "author": "",
+  "author": "Coved",
   "license": "ISC",
-  "homepage": "",
+  "homepage": "https://github.com/johancc/Coved-Backend#readme",
   "engines": {
     "node": ">=12.0.0"
   },
