--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "hotloader": "webpack-dev-server --config ./webpack.config.js --mode development --port 5000",
     "start": "nodemon --ignore client/",
-    "build": "webpack"
+    "build": "webpack",
+    "postinstall": "node postinstall.js"
   },
   "repository": {
     "type": "git"
