--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@appbaseio/reactivesearch": "^3.7.3",
+    "@bit/joshk.react-spinners-css.heart": "^1.1.7",
     "@material-ui/core": "^4.9.7",
     "@material-ui/icons": "^4.9.1",
     "@mui-treasury/styles": "^1.1.0",
@@ -40,6 +41,8 @@
     "mongoose": "^5.7.7",
     "nodemailer": "^6.4.6",
     "nodemon": "^1.19.4",
+    "pace": "0.0.4",
+    "pace-js": "^1.0.2",
     "popper.js": "^1.16.1",
     "react": "^16.7.0",
     "react-bootstrap": "^1.0.0",
