--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-hot-loader": "^4.6.3",
     "style-loader": "^0.23.1",
     "webpack": "^4.28.3",
+    "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.14"
   }
