--- a/package.json
+++ b/package.json
@@ -68,11 +68,13 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-stage-0": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "compression-webpack-plugin": "^3.1.0",
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "react-hot-loader": "^4.6.3",
     "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "^2.3.5",
     "webpack": "^4.28.3",
     "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^3.1.2",
