--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mui-treasury/styles": "^1.1.0",
     "@reach/router": "^1.2.1",
     "bootstrap": "^4.4.1",
+    "compression": "^1.7.4",
     "connect-ensure-login": "^0.1.1",
     "core-js": "^3.3.6",
     "dotenv": "^8.2.0",
