--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "core-js": "^3.3.6",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
+    "express-rate-limit": "^5.1.1",
     "express-session": "^1.17.0",
     "firebase": "^7.12.0",
     "firebase-admin": "^8.10.0",
