--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@bit/joshk.react-spinners-css.heart": "^1.1.7",
     "@material-ui/core": "^4.9.7",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.50",
     "@mui-treasury/styles": "^1.1.0",
     "@reach/router": "^1.2.1",
     "bootstrap": "^4.4.1",
