--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jquery": "^3.4.1",
     "material-ui": "^0.20.2",
     "mongoose": "^5.7.7",
+    "node-cron": "^2.0.3",
     "nodemailer": "^6.4.6",
     "nodemon": "^1.19.4",
     "pace": "0.0.4",
