--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "pace-js": "^1.0.2",
     "popper.js": "^1.16.1",
     "react": "^16.7.0",
+    "react-animated-number": "^0.4.4",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.7.0",
     "react-google-login": "^5.0.7",
