Add partners page

--- a/package.json
+++ b/package.json
@@ -19,28 +19,28 @@
     "node": ">=12.0.0"
   },
   "dependencies": {
-    "@appbaseio/reactivesearch": "^3.7.3",
-    "@bit/joshk.react-spinners-css.heart": "^1.1.7",
-    "@material-ui/core": "^4.9.7",
+    "@appbaseio/reactivesearch": "^3.11.7",
+    "@bit/joshk.react-spinners-css.heart": "^1.2.1",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.50",
-    "@reach/router": "^1.2.1",
-    "bootstrap": "^4.4.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@reach/router": "^1.3.4",
+    "bootstrap": "^4.5.0",
     "compression": "^1.7.4",
     "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
-    "express-rate-limit": "^5.1.1",
-    "express-session": "^1.17.0",
-    "firebase": "^7.12.0",
-    "firebase-admin": "^8.10.0",
-    "formik": "^2.1.4",
+    "express-rate-limit": "^5.1.3",
+    "express-session": "^1.17.1",
+    "firebase": "^7.16.1",
+    "firebase-admin": "^8.13.0",
+    "formik": "^2.1.5",
     "googleapis": "^39.2.0",
     "handlebars": "^4.7.6",
-    "jquery": "^3.4.1",
-    "mongoose": "^5.7.7",
+    "jquery": "^3.5.1",
+    "mongoose": "^5.9.25",
     "node-cron": "^2.0.3",
-    "nodemailer": "^6.4.6",
+    "nodemailer": "^6.4.10",
     "nodemailer-mandrill-transport": "^1.2.0",
     "nodemon": "^1.19.4",
     "pace": "0.0.4",
@@ -48,35 +48,36 @@
     "popper.js": "^1.16.1",
     "react": "^16.7.0",
     "react-animated-number": "^0.4.4",
-    "react-bootstrap": "^1.0.1",
+    "react-bootstrap": "^1.2.2",
     "react-dom": "^16.7.0",
     "react-landing-page": "^2.0.2",
     "react-select": "^3.1.0",
     "rebass": "^2.1.0",
+    "resolve-cwd": "^3.0.0",
     "styled-components": "^3.4.10",
     "typeface-roboto": "0.0.75",
     "url-loader": "^1.1.2",
-    "yup": "^0.28.3"
+    "yup": "^0.28.5"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.4",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/polyfill": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.10.5",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/polyfill": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
     "@babel/preset-stage-0": "^7.0.0",
     "babel-loader": "^8.0.6",
     "compression-webpack-plugin": "^3.1.0",
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "react-hot-loader": "^4.6.3",
+    "react-hot-loader": "^4.12.21",
     "style-loader": "^0.23.1",
-    "terser-webpack-plugin": "^2.3.5",
-    "webpack": "^4.28.3",
-    "webpack-bundle-analyzer": "^3.6.1",
-    "webpack-cli": "^3.1.2",
+    "terser-webpack-plugin": "^2.3.7",
+    "webpack": "^4.43.0",
+    "webpack-bundle-analyzer": "^3.8.0",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   }
 }
