--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "hotloader": "webpack-dev-server --config ./webpack.config.js --host 0.0.0.0 --mode development --port 5000",
     "start": "nodemon --ignore client/",
     "build": "webpack",
-    "postinstall": "node postinstall.js"
+    "postinstall": "node postinstall.js",
+    "heroku-postbuild": "node postinstall.js"
   },
   "repository": {
     "type": "git"
