--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "hotloader": "webpack-dev-server --config ./webpack.config.js --host 0.0.0.0 --mode development --port 5000",
     "start": "nodemon --ignore client/",
-    "build": "npx webpack",
-    "postinstall": "node postinstall.js",
-    "heroku-postbuild": "node postinstall.js"
+    "postinstall": "npx webpack && node postinstall.js",
+    "heroku-postbuild": "npx webpack && node postinstall.js"
   },
   "repository": {
     "type": "git"
@@ -33,10 +32,10 @@
     "express": "^4.16.4",
     "express-rate-limit": "^5.1.3",
     "express-session": "^1.17.1",
-    "firebase": "^7.16.1",
-    "firebase-admin": "^8.13.0",
+    "firebase": "^7.24.0",
+    "firebase-admin": "^9.3.0",
     "formik": "^2.1.5",
-    "googleapis": "^39.2.0",
+    "googleapis": "^61.0.0",
     "handlebars": "^4.7.6",
     "jquery": "^3.5.1",
     "mongoose": "^5.9.25",
@@ -56,7 +55,7 @@
     "react-select": "^3.1.0",
     "rebass": "^2.1.0",
     "resolve-cwd": "^3.0.0",
-    "styled-components": "^3.4.10",
+    "styled-components": "^5.2.0",
     "typeface-roboto": "0.0.75",
     "url-loader": "^1.1.2",
     "yup": "^0.28.5"
@@ -70,7 +69,7 @@
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-stage-0": "^7.0.0",
     "babel-loader": "^8.0.6",
-    "compression-webpack-plugin": "^3.1.0",
+    "compression-webpack-plugin": "^6.0.3",
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
